# zero2prod

./: Cargo.toml  Dockerfile  README.md  install_notes.md  sqlx-data.json
.github/workflows/: rust.yml
config/: settings-dev.toml  settings-production.toml  settings.toml
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  mod.rs  subscriptions.rs
tests/: health_check.rs
