[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1.0"
config = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres" ] }


[dev-dependencies]
actix-rt = "2.7.0"
reqwest = "0.11.11"
tokio = "1.19.2"
