[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4.1.0"
chrono = "0.4.19"
config = "0.13.1"
serde = "1.0"
serde_derive = "1.0"
sqlx = { version = "0.6", features = [ "runtime-async-std-native-tls", "postgres", "uuid", "chrono", "offline" ] }
tracing = { version = "0.1.35", features = ["log"] }
tracing-actix-web = "0.6.0"
tracing-bunyan-formatter = "0.3.3"
tracing-futures = "0.2.5"
tracing-log = "0.1.3"
tracing-subscriber = { version = "0.3.14", features = ["registry", "env-filter"] }
uuid = {version = "1.1.2", features = ["v4"]}


[dev-dependencies]
actix-rt = "2.7.0"
once_cell = "1.12.1"
reqwest = "0.11.11"
tokio = "1.19.2"
